--- a/src/components/Chat/IndividualPortrait/IndividualPortrait.css
+++ b/src/components/Chat/IndividualPortrait/IndividualPortrait.css
@@ -1,6 +1,7 @@
 .individual-portrait-inner {
   overflow: hidden;
   position: relative;
+  min-height: 50vh;
 }
 
 .individual-portrait-img-container {
@@ -53,6 +54,7 @@
   font-size: 24px;
   letter-spacing: 3.6px;
 }
+
 @media (max-width: 550px) {
   .individual-info-career {
     font-size: 11px;
